--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Kenan's Resume Docs
+site_name: Kenan's Info Website
 theme: # https://www.youtube.com/watch?v=xlABhbnNrfI
   name: material
   font:
