--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,19 +18,24 @@ theme: # https://www.youtube.com/watch?v=xlABhbnNrfI
       toggle:
         icon: material/weather-sunny
         name: Dark mode
-      primary: green
-      accent: deep purple
+      primary: blue gray
+      accent: light blue
     # Light Mode
     - scheme: default
       toggle:
         icon: material/weather-night
         name: Light mode
-      primary: blue
-      accent: deep orange
+      primary: green
+      accent: deep purple
 
 markdown_extensions:
   - admonition
   - pymdownx.details
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
 
 extra:
   social:
